[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chunktkn"
version = "0.1.0"
description = "Client-side context management for LLMs - automatic summarization, compression, and refresh without context decay"
readme = "readme.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Chandan" }
]
keywords = ["llm", "context", "memory", "openai", "gemini", "chunking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "tiktoken>=0.5.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
gemini = ["google-generativeai>=0.3.0"]
dev = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
all = [
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "rich>=13.0.0",
]

[project.scripts]
chunktkn = "chunktkn.cli:main"

[project.urls]
Homepage = "https://github.com/chandan678/chuknTKN.git"
Repository = "https://github.com/chandan678/chuknTKN.git"

[tool.hatch.build.targets.wheel]
packages = ["chunktkn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
